# prdctr

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.circleci/: config.yml
app/: main.py
app/api/v1/dependencies/: db.py
app/api/v1/routes/: api.py  products.py
app/core/: events.py  settings.py
app/db/: errors.py  events.py
app/db/alembic/: env.py
app/db/alembic/versions/: 0d9a4fc4403e_initial_products.py
app/db/repositories/: products.py
app/schemas/: base.py  mixins.py  product.py
scripts/: run-app.sh  wait-for-it.sh
tests/: test_prdctr.py
